--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/sidebar.css">
-    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/side-bar.css">
+      <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta charset="UTF-8">
@@ -10,41 +10,33 @@
     <title>Document</title>
 </head>
 <body>
-<div class="side-bar">
-    <div class="logo"> logo y menu <i class="material-icons">clear</i></div>
-    <div class="list-contenido">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </div>
+    <div id="mySidenav" class="sidenav">
+        <div class="logo-menu">
+            <button onclick="openNav()">open</button>  
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        </div>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Clients</a>
+        <a href="#">Contact</a>
+      </div>
+      
+
+<div id="main" >
+    
+    <nav class="nav-bar">
+        <form action="">
+            <button type="submit"><i class="material-icons">search</i></button>
+            <input type="text" placeholder="Search here...">
+        </form>
+        <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li></ul>
+    </nav>   
 </div>
-<nav class="nav-bar">
-    <form action="">
-        <button type="submit"><i class="material-icons">search</i></button>
-        <input type="text" placeholder="Search here...">
-    </form>
-    <ul>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-    <li>4</li>
-    <li>5</li></ul>
-</nav>   
 
 
 
@@ -54,6 +46,6 @@
 
 
 
-   
+<script src="js/sidebar.js"></script>
 </body>
 </html>
