estilizamos el header del sidebar

--- a/index.html
+++ b/index.html
@@ -7,18 +7,40 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title> 
 </head>
 <body>
     <div id="mySidenav" class="sidenav">
-        <div class="logo-menu">
-            <button onclick="openNav()">open</button>  
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="side-header">
+            <div class="logo-menu">
+                <i class="material-icons" onclick="openNav()">view_headline</i> 
+                <a href="#" class="sidebar-brand" class="logo-name">
+                    Noble<span>UI</span>
+                  </a>
+                <div href="javascript:void(0)" class="closebtn" onclick="closeNav()" id="close-btn">&times;</div>
+            </div>
         </div>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <div class="side-content">
+            <ul>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+                <li>1</li>
+            </ul>
+        </div>
       </div>
       
 
